kubernetes/apps/default/sonarr/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/route.openshift.io/route_v1.json
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarr
  labels:
    ingress: grappleberry
spec:
  host: sonarr.grappleberry.xyz
  port:
    targetPort: 8989
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: sonarr
    weight: 100
  wildcardPolicy: None
